--- a/backend api/package.json
+++ b/backend api/package.json
@@ -12,6 +12,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "pg": "^8.2.0"
   }
 }
