--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "react-particles-js": "^3.2.1",
     "react-scripts": "3.4.1",
     "react-tilt": "^0.1.4",
+    "serve": "^11.3.0",
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
